<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_yellow"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name" />

    <!-- Layout for login form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/login_layout">

            <TextView
                style="@style/text_input_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/multiplier_5"
                android:text="@string/username" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_view" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/text_input_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/multiplier_5"
                android:text="@string/password" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_view"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="@dimen/multiplier_5sp"
                android:textStyle="italic"
                android:layout_marginBottom="@dimen/multiplier_5"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/disabled_button_color"
                android:text="@string/login"
                android:enabled="false"/>

    </LinearLayout>

    <!-- Layout for other login methods -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/multiplier_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_you_can_sign_in_with"
            android:gravity="center"
            android:textColor="@color/text_gray"
            android:textStyle="italic"/>

        <!-- Layout for other login methods -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/ic_apple"
                android:contentDescription="@string/login_with_apple"
                style="@style/sign_in_method_button" />

            <ImageButton
                android:src="@drawable/ic_facebook"
                android:contentDescription="@string/login_with_apple"
                style="@style/sign_in_method_button" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>